--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,10 @@
   <title>WebEditor</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/layout/images/favicon.ico">
+  <link href="assets/layout/styles/theme/lara-light-indigo/theme.css" id="theme-css" rel="stylesheet" type="text/css">
 </head>
 <body>
-  <app-root></app-root>
+<app-root></app-root>
 </body>
 </html>
