--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,13 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>ACEditor</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="assets/layout/images/favicon.ico">
-</head>
-<body>
-<app-root></app-root>
-</body>
+    <head>
+        <meta charset="utf-8">
+        <title>ACEditor</title>
+        <base href="/">
+        <meta content="width=device-width, initial-scale=1" name="viewport">
+        <link href="assets/layout/images/favicon.ico" rel="icon" type="image/x-icon">
+    </head>
+    <body>
+        <app-root></app-root>
+    </body>
 </html>
